syntax = "proto3";

package task.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/slips-ai/slips-core/gen/go/task/v1;taskv1";

// Task represents a task entity
message Task {
  string id = 1;
  string title = 2;
  string notes = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  repeated string tag_ids = 6;
  optional google.protobuf.Timestamp archived_at = 7;
  optional string start_date = 9;       // format "YYYY-MM-DD", null means inbox
  repeated ChecklistItem checklist_items = 10;
}

// ChecklistItem represents one checklist row under a task
message ChecklistItem {
  string id = 1;
  string task_id = 2;
  string content = 3;
  bool completed = 4;
  int32 sort_order = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

// CreateTaskRequest is the request message for creating a task
message CreateTaskRequest {
  string title = 1;
  string notes = 2;
  repeated string tag_names = 3;
  optional string start_date = 5;       // optional
}

// CreateTaskResponse is the response message for creating a task
message CreateTaskResponse {
  Task task = 1;
}

// GetTaskRequest is the request message for getting a task
message GetTaskRequest {
  string id = 1;
}

// GetTaskResponse is the response message for getting a task
message GetTaskResponse {
  Task task = 1;
}

// UpdateTaskRequest is the request message for updating a task
message UpdateTaskRequest {
  string id = 1;
  string title = 2;
  string notes = 3;
  repeated string tag_names = 4;
  optional string start_date = 6;       // optional
}

// UpdateTaskResponse is the response message for updating a task
message UpdateTaskResponse {
  Task task = 1;
}

// DeleteTaskRequest is the request message for deleting a task
message DeleteTaskRequest {
  string id = 1;
}

// DeleteTaskResponse is the response message for deleting a task
message DeleteTaskResponse {}

// ArchiveTaskRequest is the request message for archiving a task
message ArchiveTaskRequest {
  string id = 1;
}

// ArchiveTaskResponse is the response message for archiving a task
message ArchiveTaskResponse {
  Task task = 1;
}

// UnarchiveTaskRequest is the request message for unarchiving a task
message UnarchiveTaskRequest {
  string id = 1;
}

// UnarchiveTaskResponse is the response message for unarchiving a task
message UnarchiveTaskResponse {
  Task task = 1;
}

// ListTasksRequest is the request message for listing tasks
message ListTasksRequest {
  int32 page_size = 1;
  string page_token = 2;
  repeated string filter_tag_ids = 3;
  optional bool include_archived = 4;
  optional bool archived_only = 5;
}

// ListTasksResponse is the response message for listing tasks
message ListTasksResponse {
  repeated Task tasks = 1;
  string next_page_token = 2;
}

// AddChecklistItemRequest creates a new checklist item for a task
message AddChecklistItemRequest {
  string task_id = 1;
  string content = 2;
}

// AddChecklistItemResponse returns the created checklist item
message AddChecklistItemResponse {
  ChecklistItem item = 1;
}

// UpdateChecklistItemRequest updates checklist item content
message UpdateChecklistItemRequest {
  string item_id = 1;
  string content = 2;
}

// UpdateChecklistItemResponse returns the updated checklist item
message UpdateChecklistItemResponse {
  ChecklistItem item = 1;
}

// SetChecklistItemCompletedRequest sets checklist item completion state
message SetChecklistItemCompletedRequest {
  string item_id = 1;
  bool completed = 2;
}

// SetChecklistItemCompletedResponse returns the updated checklist item
message SetChecklistItemCompletedResponse {
  ChecklistItem item = 1;
}

// DeleteChecklistItemRequest deletes a checklist item
message DeleteChecklistItemRequest {
  string item_id = 1;
}

// DeleteChecklistItemResponse indicates successful deletion
message DeleteChecklistItemResponse {}

// ReorderChecklistItemsRequest reorders all checklist items for a task.
// item_ids must contain all checklist item IDs for the task in final order.
message ReorderChecklistItemsRequest {
  string task_id = 1;
  repeated string item_ids = 2;
}

// ReorderChecklistItemsResponse returns checklist items in updated order
message ReorderChecklistItemsResponse {
  repeated ChecklistItem items = 1;
}

// TaskService provides CRUD operations for tasks
service TaskService {
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);
  rpc GetTask(GetTaskRequest) returns (GetTaskResponse);
  rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse);
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse);
  rpc ListTasks(ListTasksRequest) returns (ListTasksResponse);
  rpc ArchiveTask(ArchiveTaskRequest) returns (ArchiveTaskResponse);
  rpc UnarchiveTask(UnarchiveTaskRequest) returns (UnarchiveTaskResponse);
  rpc AddChecklistItem(AddChecklistItemRequest) returns (AddChecklistItemResponse);
  rpc UpdateChecklistItem(UpdateChecklistItemRequest) returns (UpdateChecklistItemResponse);
  rpc SetChecklistItemCompleted(SetChecklistItemCompletedRequest) returns (SetChecklistItemCompletedResponse);
  rpc DeleteChecklistItem(DeleteChecklistItemRequest) returns (DeleteChecklistItemResponse);
  rpc ReorderChecklistItems(ReorderChecklistItemsRequest) returns (ReorderChecklistItemsResponse);
}
